# 191019

./: .gitignore  .gitmodules  HOWTO.md  README.md  run_simulation.sh  run_synthesis.sh  setup_environment.sh  setup_toolchain.sh
sources/misc/scripts/: build_gcc.sh  build_verilator.sh  compare_outputs.py  extract_synth_results.py
sources/programs/: CMakeLists.txt  main.cpp
sources/programs/CMake/: add_test.cmake  gcc_toolchain.cmake
sources/programs/bsp/: CMakeLists.txt  crt0.S  link.ld  terminate_benchmark.cpp  terminate_benchmark.hpp  uart.cpp  uart.hpp  vicuna_crt.cpp  vicuna_crt.hpp
sources/programs/testcases/: CMakeLists.txt
sources/programs/testcases/add/: add.cpp  add.hpp  run_test.cpp  run_test.hpp  test_data.hpp
sources/programs/testcases/add/test_data/: test_data_0.cpp  test_data_1.cpp  test_data_2.cpp  test_data_3.cpp  test_data_4.cpp
sources/programs/testcases/matmul/: matmul.hpp  run_test.cpp  run_test.hpp  test_data.hpp
sources/programs/testcases/matmul/test_data/: test_data_0.cpp  test_data_1.cpp  test_data_2.cpp  test_data_3.cpp  test_data_4.cpp  test_data_5.cpp  test_data_6.cpp  test_data_7.cpp  test_data_8.cpp
sources/programs/testcases/mul/: mul.hpp  run_test.cpp  run_test.hpp
sources/programs/testcases/mul/test_data/: test_data_0.cpp  test_data_1.cpp  test_data_2.cpp  test_data_3.cpp  test_data_4.cpp  test_data_5.cpp
sources/rtl/: CMakeLists.txt  verilator_main.cpp  vproc_top.sv
sources/synthesis/: cv32e40x_sim_clock_gate.sv  synth_commands.tcl  synthesis_log.txt
sources/synthesis/.Xil/Vivado-1196505-ti29.tilab.tuwien.ac.at/incrSyn/3889272669/u/: childModToGenomes.map  genomes.map  parentModToGenomes.map  synthNameToElabName.map  topModuleToGenome.map
sources/synthesis/.Xil/Vivado-1196505-ti29.tilab.tuwien.ac.at/incrSyn/3889272669/u/g/: 1993435409.rtd.straps.rtd  2564753469.rtd.straps.rtd  30824839.rtd  30824839.rtd.straps.rtd  4023924907.rtd.straps.rtd  439873431.rtd.straps.rtd  global_name.straps.rtd  instToEncGenName.map
sources/synthesis/.Xil/Vivado-1196505-ti29.tilab.tuwien.ac.at/incrSyn/3889272669/u/t/: 286CE048.rtd  286CE1F8.rtd  286CE4B0.rtd  286CED68.rtd  286CF278.rtd  design.rtd  files.rtd  straps.rtd
sources/synthesis/.Xil/Vivado-1196505-ti29.tilab.tuwien.ac.at/realtime/: dupFiles.rpt  vproc_top.tcl
sources/synthesis/.Xil/Vivado-1196505-ti29.tilab.tuwien.ac.at/realtime/tmp/: parameters.tcl
sources/synthesis/.Xil/Vivado-1902850-ti29.tilab.tuwien.ac.at/: elab.rtd
sources/synthesis/.Xil/Vivado-1902850-ti29.tilab.tuwien.ac.at/incrSyn/3889272669/u/: childModToGenomes.map  genomes.map  parentModToGenomes.map  synthNameToElabName.map  topModuleToGenome.map
sources/synthesis/.Xil/Vivado-1902850-ti29.tilab.tuwien.ac.at/incrSyn/3889272669/u/e/: elab.rtd
sources/synthesis/.Xil/Vivado-1902850-ti29.tilab.tuwien.ac.at/incrSyn/3889272669/u/g/: 2564753469.rtd  2564753469.rtd.straps.rtd  30824839.rtd.straps.rtd  4023924907.rtd.straps.rtd  439873431.rtd.straps.rtd  global_name.straps.rtd  instToEncGenName.map
sources/synthesis/.Xil/Vivado-1902850-ti29.tilab.tuwien.ac.at/incrSyn/3889272669/u/t/: 298603A8.rtd  298603C0.rtd  29860480.rtd  29861AA0.rtd  design.rtd  files.rtd  straps.rtd
sources/synthesis/.Xil/Vivado-1902850-ti29.tilab.tuwien.ac.at/realtime/: dupFiles.rpt  vproc_top.tcl
sources/synthesis/.Xil/Vivado-1902850-ti29.tilab.tuwien.ac.at/realtime/tmp/: genlib.1D0902.0_temp  genlib.1D0902.super
student_files/: vector_config.cmake
student_files/testcases/: CMakeLists.txt
student_files/testcases/add/: add.cpp
student_files/testcases/matmul/: matmul.cpp  matmul1-3.cpp  matmul_old.cpp  matmul_v1-devel.cpp  matmul_v1.cpp  matmul_v2.cpp
student_files/testcases/mul/: mul.cpp  mul1-3.cpp
